kiwi/kiwi.output
Terminals unused in grammar

    tok_for
    tok_tab


State 9 conflicts: 12 shift/reduce
State 14 conflicts: 12 shift/reduce
State 15 conflicts: 12 shift/reduce
State 16 conflicts: 12 shift/reduce
State 19 conflicts: 12 shift/reduce
State 20 conflicts: 12 shift/reduce
State 21 conflicts: 12 shift/reduce
State 22 conflicts: 12 shift/reduce
State 23 conflicts: 12 shift/reduce
State 24 conflicts: 12 shift/reduce
State 25 conflicts: 12 shift/reduce
State 100 conflicts: 12 shift/reduce
State 112 conflicts: 13 shift/reduce
State 141 conflicts: 12 shift/reduce
State 153 conflicts: 13 shift/reduce
State 159 conflicts: 12 shift/reduce
State 160 conflicts: 13 shift/reduce


Grammar

    0 $accept: root $end

    1 root: ε
    2     | printd root
    3     | print root
    4     | assignment root
    5     | function root
    6     | function_call root
    7     | reuseParam root
    8     | if_cond_stmt root
    9     | tok_newline root
   10     | for_stmt root
   11     | array_declaration root
   12     | array_assignment root

   13 printd: tok_printd tok_number_literal tok_array_index_sep tok_number_literal ':' tok_identifier

   14 print: tok_print print_argument

   15 print_argument: tok_string_literal
   16               | term

   17 assignment: tok_identifier tok_assignment_operator_l expression
   18           | expression tok_assignment_operator_r tok_identifier

   19 expression: term
   20           | expression '+' expression
   21           | expression '-' expression
   22           | expression '/' expression
   23           | expression '*' expression
   24           | '(' expression ')'

   25 term: tok_number_literal
   26     | tok_identifier
   27     | tok_number_literal tok_array_index_sep tok_number_literal ':' tok_identifier

   28 reuseParam: tok_init_reuse_param tok_identifier tok_assignment_operator_l '[' parameterList_v ']'

   29 $@1: ε

   30 function: tok_function_start tok_identifier tok_assignment_operator_l '(' parameterList_v ')' tok_return tok_assignment_operator_r $@1 function_body tok_function_end

   31 parameterList_v: ε
   32                | parameterList
   33                | tok_reuse_params tok_identifier

   34 parameterList: tok_identifier tok_sep parameterList
   35              | tok_identifier

   36 function_body: ε
   37              | print function_body
   38              | assignment function_body
   39              | function_call function_body
   40              | function_return function_body
   41              | if_cond_stmt function_body
   42              | tok_newline function_body
   43              | for_stmt function_body

   44 function_return: tok_function_return
   45                | tok_function_return tok_assignment_operator_l expression

   46 function_call: tok_function_call tok_identifier '(' argumentList_v ')'

   47 argumentList_v: ε
   48               | argumentList

   49 argumentList: expression tok_sep argumentList
   50             | expression

   51 $@2: ε

   52 for_stmt: tok_loop '(' tok_identifier ')' '{' tok_number_literal tok_sep incr tok_sep tok_number_literal '}' $@2 '{' stmt_list '}' tok_for_end

   53 incr: '+' tok_number_literal

   54 $@3: ε

   55 $@4: ε

   56 if_cond_stmt: tok_if_cond cond_vars $@3 tok_yes '{' stmt_list '}' $@4 tok_no '{' stmt_list '}' tok_newline

   57 cond_vars: tok_identifier tok_identifier tok_op tok_less
   58          | tok_identifier tok_identifier tok_op tok_greater

   59 stmt_list: root
   60          | stmt_list root

   61 array_declaration: tok_arr tok_less tok_int tok_greater tok_identifier tok_less tok_number_literal tok_sep tok_number_literal tok_greater

   62 array_assignment: tok_number_literal tok_array_index_sep tok_number_literal ':' tok_identifier tok_assignment_operator_l tok_number_literal


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 24 30 46 52
    ')' (41) 24 30 46 52
    '*' (42) 23
    '+' (43) 20 53
    '-' (45) 21
    '/' (47) 22
    ':' (58) 13 27 62
    '[' (91) 28
    ']' (93) 28
    '{' (123) 52 56
    '}' (125) 52 56
    error (256)
    tok_print (258) 14
    tok_printd (259) 13
    tok_identifier <identifier> (260) 13 17 18 26 27 28 30 33 34 35 46 52 57 58 61 62
    tok_number_literal <double_literal> (261) 13 25 27 52 53 61 62
    tok_string_literal <string_literal> (262) 15
    tok_assignment_operator_l (263) 17 28 30 45 62
    tok_assignment_operator_r (264) 18 30
    tok_function_start (265) 30
    tok_function_end (266) 30
    tok_sep (267) 34 49 52 61
    tok_return <returnType> (268) 30
    tok_function_call (269) 46
    tok_function_return (270) 44 45
    tok_init_reuse_param (271) 28
    tok_reuse_params (272) 33
    tok_if_cond (273) 56
    tok_yes (274) 56
    tok_no (275) 56
    tok_greater (276) 58 61
    tok_less (277) 57 61
    tok_op (278) 57 58
    tok_newline (279) 9 42 56
    tok_for (280)
    tok_loop (281) 52
    tok_tab (282)
    tok_for_end (283) 52
    tok_arr (284) 61
    tok_array_index_sep (285) 13 27 62
    tok_int (286) 61


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    root <value> (44)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12
        on right: 0 2 3 4 5 6 7 8 9 10 11 12 59 60
    printd (45)
        on left: 13
        on right: 2
    print (46)
        on left: 14
        on right: 3 37
    print_argument (47)
        on left: 15 16
        on right: 14
    assignment <value> (48)
        on left: 17 18
        on right: 4 38
    expression <value> (49)
        on left: 19 20 21 22 23 24
        on right: 17 18 20 21 22 23 24 45 49 50
    term <value> (50)
        on left: 25 26 27
        on right: 16 19
    reuseParam (51)
        on left: 28
        on right: 7
    function (52)
        on left: 30
        on right: 5
    $@1 (53)
        on left: 29
        on right: 30
    parameterList_v <param_values> (54)
        on left: 31 32 33
        on right: 28 30
    parameterList <param_values> (55)
        on left: 34 35
        on right: 32 34
    function_body (56)
        on left: 36 37 38 39 40 41 42 43
        on right: 30 37 38 39 40 41 42 43
    function_return (57)
        on left: 44 45
        on right: 40
    function_call (58)
        on left: 46
        on right: 6 39
    argumentList_v <arg_values> (59)
        on left: 47 48
        on right: 46
    argumentList <arg_values> (60)
        on left: 49 50
        on right: 48 49
    for_stmt (61)
        on left: 52
        on right: 10 43
    $@2 (62)
        on left: 51
        on right: 52
    incr <value> (63)
        on left: 53
        on right: 52
    if_cond_stmt (64)
        on left: 56
        on right: 8 41
    $@3 (65)
        on left: 54
        on right: 56
    $@4 (66)
        on left: 55
        on right: 56
    cond_vars <value> (67)
        on left: 57 58
        on right: 56
    stmt_list <value> (68)
        on left: 59 60
        on right: 52 56 60
    array_declaration (69)
        on left: 61
        on right: 11
    array_assignment (70)
        on left: 62
        on right: 12


State 0

    0 $accept: • root $end

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    $default  reduce using rule 1 (root)

    root               go to state 13
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 1

   14 print: tok_print • print_argument

    tok_identifier      shift, and go to state 26
    tok_number_literal  shift, and go to state 27
    tok_string_literal  shift, and go to state 28

    print_argument  go to state 29
    term            go to state 30


State 2

   13 printd: tok_printd • tok_number_literal tok_array_index_sep tok_number_literal ':' tok_identifier

    tok_number_literal  shift, and go to state 31


State 3

   17 assignment: tok_identifier • tok_assignment_operator_l expression
   26 term: tok_identifier •

    tok_assignment_operator_l  shift, and go to state 32

    $default  reduce using rule 26 (term)


State 4

   25 term: tok_number_literal •
   27     | tok_number_literal • tok_array_index_sep tok_number_literal ':' tok_identifier
   62 array_assignment: tok_number_literal • tok_array_index_sep tok_number_literal ':' tok_identifier tok_assignment_operator_l tok_number_literal

    tok_array_index_sep  shift, and go to state 33

    $default  reduce using rule 25 (term)


State 5

   30 function: tok_function_start • tok_identifier tok_assignment_operator_l '(' parameterList_v ')' tok_return tok_assignment_operator_r $@1 function_body tok_function_end

    tok_identifier  shift, and go to state 34


State 6

   46 function_call: tok_function_call • tok_identifier '(' argumentList_v ')'

    tok_identifier  shift, and go to state 35


State 7

   28 reuseParam: tok_init_reuse_param • tok_identifier tok_assignment_operator_l '[' parameterList_v ']'

    tok_identifier  shift, and go to state 36


State 8

   56 if_cond_stmt: tok_if_cond • cond_vars $@3 tok_yes '{' stmt_list '}' $@4 tok_no '{' stmt_list '}' tok_newline

    tok_identifier  shift, and go to state 37

    cond_vars  go to state 38


State 9

    9 root: tok_newline • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 39
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 10

   52 for_stmt: tok_loop • '(' tok_identifier ')' '{' tok_number_literal tok_sep incr tok_sep tok_number_literal '}' $@2 '{' stmt_list '}' tok_for_end

    '('  shift, and go to state 40


State 11

   61 array_declaration: tok_arr • tok_less tok_int tok_greater tok_identifier tok_less tok_number_literal tok_sep tok_number_literal tok_greater

    tok_less  shift, and go to state 41


State 12

   24 expression: '(' • expression ')'

    tok_identifier      shift, and go to state 26
    tok_number_literal  shift, and go to state 27
    '('                 shift, and go to state 12

    expression  go to state 42
    term        go to state 18


State 13

    0 $accept: root • $end

    $end  shift, and go to state 43


State 14

    2 root: printd • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 44
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 15

    3 root: print • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 45
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 16

    4 root: assignment • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 46
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 17

   18 assignment: expression • tok_assignment_operator_r tok_identifier
   20 expression: expression • '+' expression
   21           | expression • '-' expression
   22           | expression • '/' expression
   23           | expression • '*' expression

    tok_assignment_operator_r  shift, and go to state 47
    '+'                        shift, and go to state 48
    '-'                        shift, and go to state 49
    '*'                        shift, and go to state 50
    '/'                        shift, and go to state 51


State 18

   19 expression: term •

    $default  reduce using rule 19 (expression)


State 19

    7 root: reuseParam • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 52
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 20

    5 root: function • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 53
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 21

    6 root: function_call • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 54
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 22

   10 root: for_stmt • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12

    tok_print             [reduce using rule 1 (root)]
    tok_printd            [reduce using rule 1 (root)]
    tok_identifier        [reduce using rule 1 (root)]
    tok_number_literal    [reduce using rule 1 (root)]
    tok_function_start    [reduce using rule 1 (root)]
    tok_function_call     [reduce using rule 1 (root)]
    tok_init_reuse_param  [reduce using rule 1 (root)]
    tok_if_cond           [reduce using rule 1 (root)]
    tok_newline           [reduce using rule 1 (root)]
    tok_loop              [reduce using rule 1 (root)]
    tok_arr               [reduce using rule 1 (root)]
    '('                   [reduce using rule 1 (root)]
    $default              reduce using rule 1 (root)

    root               go to state 55
    printd             go to state 14
    print              go to state 15
    assignment         go to state 16
    expression         go to state 17
    term               go to state 18
    reuseParam         go to state 19
    function           go to state 20
    function_call      go to state 21
    for_stmt           go to state 22
    if_cond_stmt       go to state 23
    array_declaration  go to state 24
    array_assignment   go to state 25


State 23

    8 root: if_cond_stmt • root

    tok_print             shift, and go to state 1
    tok_printd            shift, and go to state 2
    tok_identifier        shift, and go to state 3
    tok_number_literal    shift, and go to state 4
    tok_function_start    shift, and go to state 5
    tok_function_call     shift, and go to state 6
    tok_init_reuse_param  shift, and go to state 7
    tok_if_cond           shift, and go to state 8
    tok_newline           shift, and go to state 9
    tok_loop              shift, and go to state 10
    tok_arr               shift, and go to state 11
    '('                   shift, and go to state 12
